--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.UNIPPlus2" parent="Theme.AppCompat.NoActionBar" />
+    <style name="Theme.UNIPPlus2" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/primaryBackgroundLow</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.AppCompat.Light.NoActionBar</item>
+    </style>
 </resources>
