--- a/app/src/main/res/values/strings_common.xml
+++ b/app/src/main/res/values/strings_common.xml
@@ -5,4 +5,5 @@
     <string name="common_cancel_text">Cancelar</string>
     <string name="common_warning_title_text">Atenção</string>
     <string name="common_auto_sign_in_text">Login automático</string>
+    <string name="common_security_title_text">Segurança</string>
 </resources>
