--- a/app/src/main/res/values/strings_common.xml
+++ b/app/src/main/res/values/strings_common.xml
@@ -6,4 +6,5 @@
     <string name="common_warning_title_text">Atenção</string>
     <string name="common_auto_sign_in_text">Login automático</string>
     <string name="common_security_title_text">Segurança</string>
+    <string name="common_exit_text">Sair</string>
 </resources>
