added shating button to secretary dashboard

--- a/app/src/main/res/values/strings_review.xml
+++ b/app/src/main/res/values/strings_review.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="review_text">Está gostando do App? Deixe sua avaliação, ela é fundamental para futuras melhorias e funcionalidades</string>
-    <string name="review_button_text">AVALIAR</string>
+    <string name="review_text">Está gostando do App? Deixe sua avaliação e compartilhe com seus amigos</string>
+    <string name="review_button_text">Avaliar</string>
+    <string name="share_button_text">Compartilhar</string>
 </resources>
